--- a/config.yaml
+++ b/config.yaml
@@ -3,5 +3,7 @@ samples: samples.txt
 trimming:
   adapter: ACGGATCGATCGATCGATCGAT
 
+host_reference: ref_data/GRCh38_bt2/GCA_000001405.15_GRCh38_full_analysis_set.fna.bowtie_index
+
 params:
   cutadapt-pe: ""
