--- a/config.yaml
+++ b/config.yaml
@@ -7,3 +7,9 @@ host_reference: ref_data/GRCh38_bt2/GCA_000001405.15_GRCh38_full_analysis_set.fn
 
 params:
   cutadapt-pe: ""
+
+humann3:
+  db_loc: ref_data/humann3/DEMO
+  choco_db: DEMO
+  uniref_db: DEMO_diamond
+  params: ""
