--- a/config.yaml
+++ b/config.yaml
@@ -7,9 +7,14 @@ host_reference: ref_data/GRCh38_bt2/GCA_000001405.15_GRCh38_full_analysis_set.fn
 
 params:
   cutadapt-pe: ""
+  humann3: ""
 
 humann3:
   db_loc: ref_data/humann3/DEMO
   choco_db: DEMO
   uniref_db: DEMO_diamond
-  params: ""
+
+threads:
+  humann3: 4
+  metaphlan3: 4
+  host_filter: 4
