added output and ref_data to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,8 @@ dmypy.json
 #### Snakemake
 
 .snakemake/
+output/
+ref_data/
 
 #### OS X stuff
 # https://github.com/github/gitignore/blob/master/Global/macOS.gitignore
